Make case-"Remedies" link work like results button

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,13 @@ logs
 repertories
 target
 tmp
+/.cache*
+/.classpath
+/.g8
 /.idea
 /.idea_modules
+/.js
+/.jvm
 /.classpath
 /.project
 /.settings
