DB support added

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -6,6 +6,9 @@ play.filters.headers.permittedCrossDomainPolicies = "all"
 
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
+play.modules.enabled += "play.api.db.DBModule"
+play.modules.enabled += "play.api.db.HikariCPModule"
+
 play.filters.cors {
   pathPrefixes = ["/", "/lookup", "lookup"]
   allowedOrigins = ["http://localhost", "http://localhost:9000"]
@@ -16,5 +19,48 @@ play.filters.cors {
   exposedHeaders = ["Access-Control-Allow-Origin"]
 }
 
-
 session.httpOnly=false
+
+
+play.db {
+  # The combination of these two settings results in "db.default" as the default JDBC pool:
+  config = "db"
+  default = "default"
+
+  # Play uses HikariCP as the default connection pool.  You can override settings by changing the prototype:
+  # cf. https://stackoverflow.com/questions/49075152/conflict-between-hikari-quill-and-postgres-in-the-conf-file-for-play-2-6
+  prototype {
+    username = null
+    password = null
+
+    hikaricp {
+      # Sets a fixed JDBC connection pool size of 50
+      minimumIdle = 2
+      maximumPoolSize = 5
+    }
+  }
+}
+
+## JDBC Datasource
+db.default {
+  driver=org.postgresql.Driver
+  username = "postgres"
+  password = "postgres"
+  database = "oorep"
+  databaseName = "oorep"
+  serverName = "localhost"
+  host = "localhost"
+  portNumber = 5432
+  connectionTimeout = 30000
+  url="jdbc:postgresql://localhost:5432/oorep"
+  // url="postgres://postgres:postgres@localhost:5432/oorep"
+}
+
+play.evolutions.db.default.autoApply=true
+
+//dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+//dataSource.user=postgres
+//dataSource.password=postgres
+//dataSource.databaseName=oorep
+//dataSource.portNumber=5432
+//dataSource.serverName=localhost
