--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -1,8 +1,12 @@
 # https://www.playframework.com/documentation/latest/Configuration
-play.filters.enabled += "play.filters.headers.SecurityHeadersFilter"
+# play.filters.enabled += "play.filters.headers.SecurityHeadersFilter"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self'; style-src 'self' 'unsafe-inline'"
+play.filters.headers.contentSecurityPolicy = "default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com"
+# play.filters.headers.contentSecurityPolicy = "default-src 'self'; style-src 'self' 'unsafe-inline'"
 play.filters.headers.permittedCrossDomainPolicies = "all"
+# play.filters.headers.contentSecurityPolicy = "default-src 'self'; script-src 'self' http://localhost:9000 'unsafe-inline'; connect-src 'self'; img-src 'self' http://localhost:9000; style-src 'self' http://localhost:9000 'unsafe-inline'; font-src 'self' http://localhost:9000 'unsafe-inline'"
+
+# Header set Content-Security-Policy: "default-src https: 'unsafe-inline'; report-uri https://altfitcom.report-uri.com/r/d/csp/enforce;"
 
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
