MVP of public login page

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -25,6 +25,7 @@ play.filters.cors {
 
 session.httpOnly=false
 
+play.filters.enabled += "play.filters.csrf.CSRFFilter"
 
 play.db {
   # The combination of these two settings results in "db.default" as the default JDBC pool:
