First attempt at a landing page...

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -1,7 +1,9 @@
 # https://www.playframework.com/documentation/latest/Configuration
 # play.filters.enabled += "play.filters.headers.SecurityHeadersFilter"
 
-play.filters.headers.contentSecurityPolicy = "default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com"
+play.filters.headers.contentSecurityPolicy = "default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com;  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:"
+# play.filters.headers.contentSecurityPolicy = "default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com;  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:"
+
 # play.filters.headers.contentSecurityPolicy = "default-src 'self'; style-src 'self' 'unsafe-inline'"
 play.filters.headers.permittedCrossDomainPolicies = "all"
 # play.filters.headers.contentSecurityPolicy = "default-src 'self'; script-src 'self' http://localhost:9000 'unsafe-inline'; connect-src 'self'; img-src 'self' http://localhost:9000; style-src 'self' http://localhost:9000 'unsafe-inline'; font-src 'self' http://localhost:9000 'unsafe-inline'"
@@ -9,7 +11,6 @@ play.filters.headers.permittedCrossDomainPolicies = "all"
 # Header set Content-Security-Policy: "default-src https: 'unsafe-inline'; report-uri https://altfitcom.report-uri.com/r/d/csp/enforce;"
 
 play.filters.enabled += "play.filters.cors.CORSFilter"
-
 play.modules.enabled += "play.api.db.DBModule"
 play.modules.enabled += "play.api.db.HikariCPModule"
 
