Fix up equals methods (embarrassingly late)

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -24,7 +24,8 @@ play.filters.cors {
   exposedHeaders = ["Access-Control-Allow-Origin"]
 }
 
-session.httpOnly=false
+// session.httpOnly=false - deprecated, use now:
+play.http.session.httpOnly=false
 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 
