Change DB passwords

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -51,8 +51,8 @@ play.db {
 ## JDBC Datasource
 db.default {
   driver=org.postgresql.Driver
-  username = "postgres"
-  password = "postgres"
+  username = "oorep_user"
+  password = ${?OOREP_USER_PASS}
   database = "oorep"
   databaseName = "oorep"
   serverName = "localhost"
@@ -64,10 +64,3 @@ db.default {
 }
 
 play.evolutions.db.default.autoApply=true
-
-//dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-//dataSource.user=postgres
-//dataSource.password=postgres
-//dataSource.databaseName=oorep
-//dataSource.portNumber=5432
-//dataSource.serverName=localhost
