Add https and remove hard-coded server-path

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -16,18 +16,30 @@ play.modules.enabled += "play.api.db.HikariCPModule"
 
 play.filters.cors {
   pathPrefixes = ["/", "/lookup", "lookup"]
-  allowedOrigins = ["http://localhost", "http://localhost:9000"]
-  allowedHttpMethods = ["GET", "POST", "PUT"]
+  allowedOrigins = ["http://localhost", "https://localhost", "http://localhost:9000", "https://localhost:9443"]
+  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
   allowedHttpHeaders = ["Accept"]
   preflightMaxAge = 3 days
   serveForbiddenOrigins = true
   exposedHeaders = ["Access-Control-Allow-Origin"]
 }
 
-// session.httpOnly=false - deprecated, use now:
-play.http.session.httpOnly=false
-
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
+
+# https://stackoverflow.com/questions/44381638/how-to-configure-ssl-certificate-on-play-framework
+# https://sysgears.com/articles/how-to-use-https-with-play-framework/
+# session.httpOnly=false - deprecated, use now:
+play.http.session.httpOnly=false
+# play.crypto.secret="changeme"
+play.http.secret.key="sdfjhJKHasdwe32"  # https://www.playframework.com/documentation/2.7.x/ApplicationSecret
+play.server.https.keyStore.path = "/home/baueran/tomcat.keystore"
+play.server.https.keyStore.type = "JKS"
+play.server.https.keyStore.password = "sdahgdsa21HGas21%*jJ"
+
+# Redirect to https always
+play.filters.enabled += play.filters.https.RedirectHttpsFilter
+# By default, the redirect only happens in Prod mode. To override this, set
+play.filters.https.redirectEnabled = true
 
 play.db {
   # The combination of these two settings results in "db.default" as the default JDBC pool:
