--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -19,7 +19,7 @@ play.filters.cors {
   allowedOrigins = ["http://localhost", "https://localhost", "http://localhost:9000", "https://localhost:9443"]
   allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
   allowedHttpHeaders = ["Accept"]
-  preflightMaxAge = 3 days
+  // preflightMaxAge = 3 days
   serveForbiddenOrigins = true
   exposedHeaders = ["Access-Control-Allow-Origin"]
 }
