throw out CORS again as it's unsafe and unnecessary

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -6,36 +6,24 @@
 # TODO: Add http://domain https://domain to below list, when a domain is bought later!
 play.filters.headers.contentSecurityPolicy = "script-src 'self' 'unsafe-inline' 'unsafe-eval'"
 
-play.filters.headers.permittedCrossDomainPolicies = "all"
-
-play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
+play.filters.csrf.cookie.name = "csrfCookie"
+play.filters.csrf.token.name = "csrfToken"
+
 # Redirect to https always
 play.filters.enabled += play.filters.https.RedirectHttpsFilter
 # By default, the redirect only happens in Prod mode. To override this, set
 play.filters.https.redirectEnabled = true
 
-play.filters.cors {
-   pathPrefixes = ["/"]
-   # TODO: Add actual domain later! (See above!)
-   allowedOrigins = ["http://localhost", "https://localhost", "http://localhost:9000", "https://localhost:9443"]
-   allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
-   # allowedHttpHeaders = ["Accept"]
-   # preflightMaxAge = 3 days
-   # serveForbiddenOrigins = true
-   exposedHeaders = ["Access-Control-Allow-Origin"]
-}
-play.filters.csrf.cookie.name = "csrfCookie"
-play.filters.csrf.token.name = "csrfToken"
+play.server.https.keyStore.path = ${OOREP_KEYSTORE_FILE}
+play.server.https.keyStore.type = "JKS"
+play.server.https.keyStore.password = ${OOREP_KEYSTORE_PASS}
 
 # https://stackoverflow.com/questions/44381638/how-to-configure-ssl-certificate-on-play-framework
 # https://sysgears.com/articles/how-to-use-https-with-play-framework/
 play.http.session.httpOnly = false
-play.http.session.sameSite = "strict"
+play.http.session.sameSite = "strict"               # This is **crucial** against csrf attacks!
 play.http.secret.key = ${OOREP_APPLICATION_SECRET}  # https://www.playframework.com/documentation/2.7.x/ApplicationSecret
-play.server.https.keyStore.path = ${OOREP_KEYSTORE_FILE}
-play.server.https.keyStore.type = "JKS"
-play.server.https.keyStore.password = ${OOREP_KEYSTORE_PASS}
 
 play.modules.enabled += "play.api.db.DBModule"
 play.modules.enabled += "play.api.db.HikariCPModule"
