More secure cookies

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -9,6 +9,7 @@ play.filters.headers.contentSecurityPolicy = "script-src 'self' 'unsafe-inline' 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.csrf.cookie.name = "csrfCookie"
 play.filters.csrf.token.name = "csrfToken"
+play.filters.csrf.cookie.secure = true
 
 # ############################################################################
 # Not needed if reverse proxy (which uses https) is active:
@@ -23,10 +24,9 @@ play.filters.csrf.token.name = "csrfToken"
 # play.server.https.keyStore.password = ${OOREP_KEYSTORE_PASS}
 # ############################################################################
 
-# https://stackoverflow.com/questions/44381638/how-to-configure-ssl-certificate-on-play-framework
-# https://sysgears.com/articles/how-to-use-https-with-play-framework/
-play.http.session.httpOnly = false
+play.http.session.httpOnly = true
 play.http.session.sameSite = "strict"               # This is **crucial** against csrf attacks!
+play.http.session.secure = true
 play.http.secret.key = ${OOREP_APPLICATION_SECRET}  # https://www.playframework.com/documentation/2.7.x/ApplicationSecret
 
 play.modules.enabled += "play.api.db.DBModule"
