Do not attempt to put port in URL if none was given.

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -10,14 +10,18 @@ play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.csrf.cookie.name = "csrfCookie"
 play.filters.csrf.token.name = "csrfToken"
 
+# ############################################################################
+# Not needed if reverse proxy (which uses https) is active:
+#
 # Redirect to https always
-play.filters.enabled += play.filters.https.RedirectHttpsFilter
+# play.filters.enabled += play.filters.https.RedirectHttpsFilter
 # By default, the redirect only happens in Prod mode. To override this, set
-play.filters.https.redirectEnabled = true
-
-play.server.https.keyStore.path = ${OOREP_KEYSTORE_FILE}
-play.server.https.keyStore.type = "JKS"
-play.server.https.keyStore.password = ${OOREP_KEYSTORE_PASS}
+# play.filters.https.redirectEnabled = true
+#
+# play.server.https.keyStore.path = ${OOREP_KEYSTORE_FILE}
+# play.server.https.keyStore.type = "JKS"
+# play.server.https.keyStore.password = ${OOREP_KEYSTORE_PASS}
+# ############################################################################
 
 # https://stackoverflow.com/questions/44381638/how-to-configure-ssl-certificate-on-play-framework
 # https://sysgears.com/articles/how-to-use-https-with-play-framework/
@@ -27,6 +31,14 @@ play.http.secret.key = ${OOREP_APPLICATION_SECRET}  # https://www.playframework.
 
 play.modules.enabled += "play.api.db.DBModule"
 play.modules.enabled += "play.api.db.HikariCPModule"
+
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  # allowed = ["bruckner.fritz.box", "localhost:9000", "localhost:9443"]
+
+  # Sufficient if reverse proxy is active:
+  allowed = ["bruckner.fritz.box"]
+}
 
 play.db {
   # The combination of these two settings results in "db.default" as the default JDBC pool:
