--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -9,7 +9,6 @@ play.filters.headers.contentSecurityPolicy = "script-src 'self' 'unsafe-inline' 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.csrf.cookie.name = "csrfCookie"
 play.filters.csrf.token.name = "csrfToken"
-play.filters.csrf.cookie.secure = false             # This has to be false or Csrf-Token is not sent back via browser
 
 # ############################################################################
 # Not needed if reverse proxy (which uses https) is active:
@@ -24,7 +23,12 @@ play.filters.csrf.cookie.secure = false             # This has to be false or Cs
 # play.server.https.keyStore.password = ${OOREP_KEYSTORE_PASS}
 # ############################################################################
 
-play.http.session.secure = false                    # This has to be false or Csrf-Token is not sent back via browser
+# This effectively means that Csrf-Token is only sent via https, if set to true.
+# (We don't need this due to Play acting behind reverse proxy.  In fact, having
+# it set to false means we can more easily test the Play application via http.)
+play.filters.csrf.cookie.secure = false
+play.http.session.secure = false
+
 play.http.session.httpOnly = true
 play.http.session.sameSite = "strict"               # This is **crucial** against csrf attacks!
 play.http.secret.key = ${OOREP_APPLICATION_SECRET}  # https://www.playframework.com/documentation/2.7.x/ApplicationSecret
