--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -41,7 +41,7 @@ play.filters.hosts {
   # allowed = ["bruckner.fritz.box", "localhost:9000", "localhost:9443"]
 
   # Sufficient if reverse proxy is active:
-  allowed = ["bruckner.fritz.box", "oorep.pspace.org"]
+  allowed = ["localhost", "bruckner.fritz.box", "oorep.pspace.org"]
 }
 
 play.db {
