--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: java:8
 
 before_script:
+  - apt-key adv --keyserver keyserver.ubuntu.com --recv-keys AA8E81B4331F7F50
   - apt-get update -y
   - apt-get install apt-transport-https -y
   # Install SBT
