--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,11 @@ before_script:
 #  - apt-get install sbt -y
   - sbt compile
 
+build:
+  script:
+    - sbt compile
+    - sbt dist
+
 #test:
 #  script:
 #    - sbt clean test
