--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,25 +1,23 @@
 image: java:8
 
+services: 
+  - postgres:11
+
+variables:
+  OOREP_DBUSER_PASS=test
+  OOREP_APPLICATION_SECRET=test
+  OOREP_REP_PATH=/
+
 before_script:
-  #  - apt-key adv --keyserver keyserver.ubuntu.com --recv-keys AA8E81B4331F7F50
-  # - apt-get update -y
-  # - apt-get install apt-transport-https -y
   # Install SBT
   - wget https://bintray.com/artifact/download/sbt/debian/sbt-1.3.4.deb
   - dpkg -i sbt-1.3.4.deb
-  # - apt-get update
-  #- apt-get install sbt
-#  - echo "deb http://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
-#  - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 642AC823
-#  - apt-get update -y
-#  - apt-get install sbt -y
-  - sbt compile
 
 build:
   script:
     - sbt compile
     - sbt dist
 
-#test:
-#  script:
-#    - sbt clean test
+test:
+  script:
+    - sbt test
