--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -68,10 +68,10 @@ db.default {
   username = "oorep_user"
   password = ${?OOREP_DBUSER_PASS}
   database = "oorep"
-  host = "127.0.0.1"
+  host = "postgres"
   portNumber = 5432
   connectionTimeout = 30000
-  url = "jdbc:postgresql://127.0.0.1:5432/oorep"
+  url = "jdbc:postgresql://postgres:5432/oorep"
 }
 
 play.evolutions.db.default.autoApply=true
