--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -66,12 +66,12 @@ play.db {
 db.default {
   driver=org.postgresql.Driver
   username = "oorep_user"
-  password = ${?OOREP_DBUSER_PASS}
+  password = "${?OOREP_DBUSER_PASS}"
   database = "oorep"
-  host = "postgres"
+  host = "${?OOREP_DBHOST}"
   portNumber = 5432
   connectionTimeout = 30000
-  url = "jdbc:postgresql://postgres:5432/oorep"
+  url = "jdbc:postgresql://${?OOREP_DBHOST}:5432/oorep"
 }
 
 play.evolutions.db.default.autoApply=true
