--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -71,7 +71,7 @@ db.default {
   host = ${?OOREP_DBHOST}
   portNumber = 5432
   connectionTimeout = 30000
-  url = jdbc:postgresql://${?OOREP_DBHOST}:5432/oorep
+  url = "jdbc:postgresql://"${?OOREP_DBHOST}":5432/oorep"
 }
 
 play.evolutions.db.default.autoApply=true
