--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -4,7 +4,7 @@
 # ################################################################
 
 # TODO: Add http://domain https://domain to below list, when a domain is bought later!
-play.filters.headers.contentSecurityPolicy = "script-src 'self' 'unsafe-inline' 'unsafe-eval'"
+play.filters.headers.contentSecurityPolicy = "script-src 'self'"
 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.csrf.cookie.name = "csrfCookie"
