--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -27,7 +27,7 @@ play.filters.csrf.token.name = "csrfToken"
 # (We don't need this due to Play acting behind reverse proxy.  In fact, having
 # it set to false means we can more easily test the Play application via http.)
 play.filters.csrf.cookie.secure = false
-play.filters.csrf.cookie.sameSite = true
+play.filters.csrf.cookie.sameSite = "strict"
 play.http.session.secure = false
 
 play.http.session.httpOnly = true
