fiddle with contentSecurityPolicy

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -3,8 +3,9 @@
 # https://www.playframework.com/documentation/2.6.x/Configuration
 # ################################################################
 
-# TODO: Add http://domain https://domain to below list, when a domain is bought later!
-play.filters.headers.contentSecurityPolicy = "script-src 'self'"
+# Apparently, this is deprecated, and we set the policy in apache2.conf anyway
+# 'null' means to not set this header at all here.
+play.filters.headers.contentSecurityPolicy = null
 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.csrf.cookie.name = "csrfCookie"
