test settings some more

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -5,7 +5,7 @@
 
 # Apparently, this is deprecated, and we set the policy in apache2.conf anyway
 # 'null' means to not set this header at all here.
-play.filters.headers.contentSecurityPolicy = null
+play.filters.headers.contentSecurityPolicy = "script-src 'self' 'unsafe-inline' 'unsafe-eval'"
 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.csrf.cookie.name = "csrfCookie"
@@ -28,7 +28,7 @@ play.filters.csrf.token.name = "csrfToken"
 # (We don't need this due to Play acting behind reverse proxy.  In fact, having
 # it set to false means we can more easily test the Play application via http.)
 play.filters.csrf.cookie.secure = false
-play.filters.csrf.cookie.sameSite = "strict"
+# play.filters.csrf.cookie.sameSite = "strict"
 play.http.session.secure = false
 
 play.http.session.httpOnly = true
