clean up application.conf, plugins.sbt and English privacy policy

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -5,7 +5,7 @@
 
 # Apparently, this is deprecated, and we set the policy in apache2.conf anyway
 # 'null' means to not set this header at all here.
-play.filters.headers.contentSecurityPolicy = "script-src 'self' 'unsafe-inline' 'unsafe-eval'"
+play.filters.headers.contentSecurityPolicy = null
 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.csrf.cookie.name = "csrfCookie"
@@ -22,12 +22,14 @@ play.filters.csrf.token.name = "csrfToken"
 # play.server.https.keyStore.path = ${OOREP_KEYSTORE_FILE}
 # play.server.https.keyStore.type = "JKS"
 # play.server.https.keyStore.password = ${OOREP_KEYSTORE_PASS}
+
 # ############################################################################
 
 # This effectively means that Csrf-Token is only sent via https, if set to true.
 # (We don't need this due to Play acting behind reverse proxy.  In fact, having
 # it set to false means we can more easily test the Play application via http.)
 play.filters.csrf.cookie.secure = false
+# We get Apache's rewrite to enforce this for us to the outside world; internally a lax handling is easier.
 # play.filters.csrf.cookie.sameSite = "strict"
 play.http.session.secure = false
 
@@ -40,10 +42,7 @@ play.modules.enabled += "play.api.db.HikariCPModule"
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  # allowed = ["bruckner.fritz.box", "localhost:9000", "localhost:9443"]
-
-  # Sufficient if reverse proxy is active:
-  allowed = ["localhost", "bruckner.fritz.box", "oorep.pspace.org", "www.oorep.com"]
+  allowed = ["localhost", "oorep.pspace.org", "www.oorep.com"]
 }
 
 play.db {
@@ -58,7 +57,6 @@ play.db {
     password = null
 
     hikaricp {
-      # Sets a fixed JDBC connection pool size of 50
       minimumIdle = 4
       maximumPoolSize = 10
     }
