if initial case was too large, it couldn't be added to a file

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -40,6 +40,9 @@ play.http.secret.key = ${OOREP_APPLICATION_SECRET}  # https://www.playframework.
 play.modules.enabled += "play.api.db.DBModule"
 play.modules.enabled += "play.api.db.HikariCPModule"
 
+play.http.parser.maxMemoryBuffer=20MB
+play.http.parser.maxDiskBuffer=20MB
+
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
   allowed = ["localhost", "oorep.pspace.org", "www.oorep.com"]
