Share results link, better looking on small screens

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ services:
 variables:
   OOREP_DBUSER_PASS: test
   OOREP_DBHOST: postgres  
+  OOREP_DBPORT: 5432
   OOREP_APPLICATION_SECRET: test
   OOREP_REP_PATH: /
   POSTGRES_DB: oorep
