--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -72,9 +72,9 @@ db.default {
   password = ${?OOREP_DBUSER_PASS}
   database = "oorep"
   host = ${?OOREP_DBHOST}
-  portNumber = 5432
+  portNumber = ${?OOREP_DBPORT}
   connectionTimeout = 30000
-  url = "jdbc:postgresql://"${?OOREP_DBHOST}":5432/oorep"
+  url = "jdbc:postgresql://"${?OOREP_DBHOST}":"${OOREP_DBPORT}"/oorep"
 }
 
 play.evolutions.db.default.autoApply=true
