--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -45,7 +45,7 @@ play.http.parser.maxDiskBuffer=20MB
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["localhost", "oorep.pspace.org", "www.oorep.com"]
+  allowed = ["localhost", ".pspace.org", ".oorep.com"]
 }
 
 play.db {
