--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -69,12 +69,12 @@ play.db {
 db.default {
   driver=org.postgresql.Driver
   username = "oorep_user"
-  password = ${?OOREP_DBUSER_PASS}
+  password = ${?OOREP_DB_PASS}
   database = "oorep"
-  host = ${?OOREP_DBHOST}
-  portNumber = ${?OOREP_DBPORT}
+  host = ${?OOREP_DB_HOST}
+  portNumber = ${?OOREP_DB_PORT}
   connectionTimeout = 30000
-  url = "jdbc:postgresql://"${?OOREP_DBHOST}":"${OOREP_DBPORT}"/oorep"
+  url = "jdbc:postgresql://"${?OOREP_DB_HOST}":"${OOREP_DB_PORT}"/oorep"
 }
 
 play.evolutions.db.default.autoApply=true
