--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -11,20 +11,6 @@ play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.csrf.cookie.name = "csrfCookie"
 play.filters.csrf.token.name = "csrfToken"
 
-# ############################################################################
-# Not needed if reverse proxy (which uses https) is active:
-#
-# Redirect to https always
-# play.filters.enabled += play.filters.https.RedirectHttpsFilter
-# By default, the redirect only happens in Prod mode. To override this, set
-# play.filters.https.redirectEnabled = true
-#
-# play.server.https.keyStore.path = ${OOREP_KEYSTORE_FILE}
-# play.server.https.keyStore.type = "JKS"
-# play.server.https.keyStore.password = ${OOREP_KEYSTORE_PASS}
-
-# ############################################################################
-
 # This effectively means that Csrf-Token is only sent via https, if set to true.
 # (We don't need this due to Play acting behind reverse proxy.  In fact, having
 # it set to false means we can more easily test the Play application via http.)
@@ -34,8 +20,8 @@ play.filters.csrf.cookie.secure = false
 play.http.session.secure = false
 
 play.http.session.httpOnly = true
-play.http.session.sameSite = "strict"               # This is **crucial** against csrf attacks!
-play.http.secret.key = ${OOREP_APPLICATION_SECRET}  # https://www.playframework.com/documentation/2.7.x/ApplicationSecret
+play.http.session.sameSite = "strict"       # This is **crucial** against csrf attacks!
+play.http.secret.key = ${OOREP_APP_SECRET}  # https://www.playframework.com/documentation/2.7.x/ApplicationSecret
 
 play.modules.enabled += "play.api.db.DBModule"
 play.modules.enabled += "play.api.db.HikariCPModule"
@@ -45,7 +31,7 @@ play.http.parser.maxDiskBuffer=20MB
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["localhost", ".pspace.org", ".oorep.com"]
+  allowed = ["localhost", "."${?OOREP_APP_DOMAIN}]
 }
 
 play.db {
@@ -67,14 +53,14 @@ play.db {
 }
 
 db.default {
-  driver=org.postgresql.Driver
-  username = "oorep_user"
+  driver = org.postgresql.Driver
+  username = ${?OOREP_DB_USER}
   password = ${?OOREP_DB_PASS}
-  database = "oorep"
+  database = ${?OOREP_DB_NAME}
   host = ${?OOREP_DB_HOST}
   portNumber = ${?OOREP_DB_PORT}
   connectionTimeout = 30000
-  url = "jdbc:postgresql://"${?OOREP_DB_HOST}":"${OOREP_DB_PORT}"/oorep"
+  url = "jdbc:postgresql://"${?OOREP_DB_HOST}":"${OOREP_DB_PORT}"/"${?OOREP_DB_NAME}
 }
 
-play.evolutions.db.default.autoApply=true
+play.evolutions.db.default.autoApply = true
