--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -8,19 +8,13 @@
 play.filters.headers.contentSecurityPolicy = null
 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
+
 play.filters.csrf.cookie.name = "csrfCookie"
 play.filters.csrf.token.name = "csrfToken"
-
-# This effectively means that Csrf-Token is only sent via https, if set to true.
-# (We don't need this due to Play acting behind reverse proxy.  In fact, having
-# it set to false means we can more easily test the Play application via http.)
-play.filters.csrf.cookie.secure = false
-# We get Apache's rewrite to enforce this for us to the outside world; internally a lax handling is easier.
-# play.filters.csrf.cookie.sameSite = "strict"
-play.http.session.secure = false
-
-play.http.session.httpOnly = true
-play.http.session.sameSite = "strict"       # This is **crucial** against csrf attacks!
+play.filters.csrf.cookie.secure = true
+play.http.session.secure = true
+play.http.session.httpOnly = false
+play.http.session.sameSite = "strict"
 play.http.secret.key = ${OOREP_APP_SECRET}  # https://www.playframework.com/documentation/2.7.x/ApplicationSecret
 
 play.modules.enabled += "play.api.db.DBModule"
