--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
-image: eclipse-temurin:11
+image: eclipse-temurin:17
 
 services: 
   - postgres:11
 
 variables:
+  SBT_VERSION: "1.9.7"
   OOREP_DB_PASS: test
   OOREP_DB_HOST: postgres
   OOREP_DB_PORT: 5432
@@ -15,14 +16,15 @@ variables:
   PGPASSWORD: test
 
 before_script:
-  # Install SBT
-  - wget https://scala.jfrog.io/artifactory/debian/sbt-1.3.4.deb
-  - dpkg -i sbt-1.3.4.deb
+  - apt-get update -y
+  - apt-get install -y zip unzip
+  - wget https://github.com/sbt/sbt/releases/download/v${SBT_VERSION}/sbt-${SBT_VERSION}.zip
+  - unzip sbt-${SBT_VERSION}.zip
 
 build:
   script:
-    - sbt ++2.13.1 compile
-    - sbt ++2.13.1 dist
+    - ./sbt/bin/sbt ++2.13.12 compile
+    - ./sbt/bin/sbt ++2.13.12 dist
 
 # Testing currently only works from within IntelliJ.
 # 
