--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -7,11 +7,50 @@
 # 'null' means to not set this header at all here.
 play.filters.headers.contentSecurityPolicy = null
 
+play.modules.enabled += "play.filters.csrf.CSRFModule"
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 
 play.filters.csrf.cookie.name = "csrfCookie"
 play.filters.csrf.token.name = "csrfToken"
 play.filters.csrf.cookie.secure = true
+
+# play.filters.csrf {
+#   bypassCorsTrustedOrigins = false
+
+#   method {
+#       # If non empty, then requests will be checked if the method is not in this list.
+#       # whiteList = ["GET", "HEAD", "OPTIONS"]
+#       whitelist = []
+
+#       # The black list is only used if the white list is empty.
+#       # Only check methods in this list.
+#       blackList = [ "GET", "PUT", "POST", "DELETE" ]
+#   }
+
+#   header {
+#       # The name of the header to accept CSRF tokens from.
+#       # name = "Csrf-Token"
+#       name = "csrfCookie"
+
+#       # Defines headers that must be present to perform the CSRF check. If any of these headers are present, the CSRF
+#       # check will be performed.
+#       #
+#       # By default, we only perform the CSRF check if there are Cookies or an Authorization header.
+#       # Generally, CSRF attacks use a user's browser to execute requests on the client's behalf. If the user does not
+#       # have an active session, there is no danger of this happening.
+#       #
+#       # Setting this to null or an empty object will protect all requests.
+#       protectHeaders {
+#         Cookie = "*"
+#         Authorization = "*"
+#       }
+
+#       # Defines headers that can be used to bypass the CSRF check if any are present. A value of "*" simply
+#       # checks for the presence of the header. A string value checks for a match on that string.
+#       bypassHeaders {}
+#   }
+# }
+
 play.http.session.secure = true
 play.http.session.httpOnly = false
 play.http.session.sameSite = "strict"
